--- a/addons/icofr/views/materiality_views.xml
+++ b/addons/icofr/views/materiality_views.xml
@@ -10,8 +10,11 @@
             <form string="Kalkulator Materialitas ICORF" create="false" edit="false">
                 <header>
                     <button name="action_calculate_materiality" type="object" string="Hitung Ulang Materialitas" class="oe_highlight"/>
+                    <button name="action_update_balances_from_erp" type="object" string="Tarik Saldo dari ERP" class="btn-success" icon="fa-refresh"/>
                     <button name="action_export_materiality" type="object" string="Ekspor"/>
+                    <button name="%(action_icofr_account_mapping_upload_wizard)d" type="action" string="Upload Excel Pemetaan Akun" class="btn-primary"/>
                 </header>
+
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive">
@@ -58,6 +61,13 @@
                             <field name="account_mapping_ids">
                                 <list editable="top">
                                     <field name="name"/>
+                                    <field name="gl_account"/>
+                                    <field name="account_gl_id"/>
+                                    <field name="account_balance" sum="Total Saldo"/>
+                                    <field name="fsl_item"/>
+                                    <field name="significance_level"/>
+                                    <field name="is_significant_account"/>
+                                    <field name="status"/>
                                 </list>
                             </field>
                         </page>
@@ -131,6 +141,7 @@
             <form string="Pemetaan Akun GL ke FSLI">
                 <header>
                     <button name="action_validate_mapping" type="object" string="Validasi Pemetaan" class="oe_highlight"/>
+                    <button name="action_generate_questions" type="object" string="Generate Kuesioner" class="btn-secondary"/>
                 </header>
                 <sheet>
                     <group>
@@ -141,12 +152,15 @@
                         </group>
                         <group>
                             <field name="status"/>
+                            <field name="account_balance"/>
                             <field name="is_significant_account" readonly="1"/>
                         </group>
                     </group>
                     <group>
                         <group string="Detail Akun">
                             <field name="gl_account"/>
+                            <field name="account_gl_id"/>
+                            <field name="gl_account_description"/>
                             <field name="account_description"/>
                         </group>
                         <group string="FSLI (Financial Statement Line Item)">
@@ -154,10 +168,30 @@
                             <field name="fsl_description"/>
                         </group>
                     </group>
+                    <group string="Penilaian Kualitatif Risiko (Cepat)">
+                        <group>
+                            <field name="has_fraud_risk"/>
+                            <field name="is_complex_transaction"/>
+                        </group>
+                        <group>
+                            <field name="has_related_party"/>
+                        </group>
+                    </group>
                     <group>
                         <field name="significance_level"/>
+                        <field name="qualitative_total_score" readonly="1"/>
                     </group>
                     <notebook>
+                        <page string="Asesmen Kualitatif (Detail)">
+                            <field name="qualitative_assessment_ids">
+                                <list editable="top">
+                                    <field name="question"/>
+                                    <field name="answer"/>
+                                    <field name="score"/>
+                                    <field name="notes"/>
+                                </list>
+                            </field>
+                        </page>
                         <page string="Proses Terkait">
                             <field name="process_ids" widget="many2many_tags"/>
                         </page>
@@ -171,6 +205,7 @@
                             <field name="notes"/>
                         </page>
                     </notebook>
+
                 </sheet>
             </form>
         </field>
@@ -185,6 +220,8 @@
                 <field name="name"/>
                 <field name="code"/>
                 <field name="gl_account"/>
+                <field name="account_gl_id"/>
+                <field name="account_balance" sum="Total Saldo"/>
                 <field name="fsl_item"/>
                 <field name="significance_level"/>
                 <field name="status"/>
