--- a/addons/icofr/views/control_views.xml
+++ b/addons/icofr/views/control_views.xml
@@ -38,6 +38,10 @@
                     <group>
                         <group>
                             <field name="control_type"/>
+                            <field name="control_specific_type"/>
+                            <field name="control_risk_level"/>
+                            <field name="service_provider_name" invisible="control_specific_type != 'service_org'"/>
+                            <field name="soc_report_ref" invisible="control_specific_type != 'service_org'"/>
                             <field name="frequency"/>
                             <field name="owner_id"/>
                         </group>
@@ -49,6 +53,12 @@
                         <page string="Deskripsi">
                             <field name="description"/>
                             <field name="objective"/>
+                        </page>
+                        <page string="Framework COBIT">
+                            <group>
+                                <field name="cobit_element_id"/>
+                                <field name="cobit_element_ids"/>
+                            </group>
                         </page>
                     </notebook>
                 </sheet>
