--- a/addons/icofr/views/dashboard_views.xml
+++ b/addons/icofr/views/dashboard_views.xml
@@ -15,6 +15,11 @@
                         <h1>Dashboard ICORF</h1>
                     </div>
 
+                    <!-- Fiscal Year Selector -->
+                    <group col="4">
+                        <field name="fiscal_year" widget="selection"/>
+                    </group>
+
                     <div class="row mt16">
                         <div class="col-3">
                             <div class="card text-center">
