--- a/addons/icofr/views/materiality_views.xml
+++ b/addons/icofr/views/materiality_views.xml
@@ -48,6 +48,7 @@
                             <field name="overall_materiality_amount" widget="monetary"/>
                         </group>
                         <group>
+                            <field name="risk_factor_level" widget="radio"/>
                             <field name="performance_materiality_percent"/>
                             <field name="performance_materiality_amount" widget="monetary"/>
                         </group>
