--- a/addons/icofr/views/control_views.xml
+++ b/addons/icofr/views/control_views.xml
@@ -47,12 +47,23 @@
                         </group>
                         <group>
                             <field name="status"/>
+                            <field name="design_effective" widget="boolean_toggle"/>
                         </group>
                     </group>
                     <notebook>
                         <page string="Deskripsi">
                             <field name="description"/>
                             <field name="objective"/>
+                        </page>
+                        <page string="Validasi Rancangan (Lini 2)">
+                            <field name="design_validation_ids">
+                                <list>
+                                    <field name="name"/>
+                                    <field name="test_date"/>
+                                    <field name="design_validation_conclusion"/>
+                                    <field name="tester_id"/>
+                                </list>
+                            </field>
                         </page>
                         <page string="Framework COBIT">
                             <group>
